--- a/assets/riot-games.css
+++ b/assets/riot-games.css
@@ -12,14 +12,16 @@ nav {
 
 .Navigatie{
     list-style: none;
-    font-size: 1.3em;
     display: flex;
     grid-auto-flow: column;
-    color: black;
     margin: 0;
     margin-left: 10em;
 
-
+    a {
+        color: white;
+        font-size: 14pt;
+        text-decoration: none;
+    }
 }
 
 li{
