--- a/assets/riot-games.css
+++ b/assets/riot-games.css
@@ -5,29 +5,43 @@
     display: flex;
 }
 
-nav {
+.sub-nav {
     display: flex;
     align-items: center;
 }
 
-.Navigatie{
+.Navigatie {
     list-style: none;
     display: flex;
     grid-auto-flow: column;
     margin: 0;
-    margin-left: 10em;
 
-    a {
-        color: white;
-        font-size: 14pt;
-        text-decoration: none;
-    }
+}
+a {
+    color: white;
+    font-size: 14pt;
+    text-decoration: none;
 }
 
 li{
-    margin-right: 30px;
+    margin-right: 20px;
 }
 
 .nav-container {
-    display:flex;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+nav div{
+    flex: 1;
+}
+
+.sing-in-button{
+    border-radius: 25px;
+    background-color: red;
+    padding: 10px 20px;
 }
