--- a/assets/riot-games.css
+++ b/assets/riot-games.css
@@ -34,6 +34,7 @@ li{
     position: absolute;
     top: 0;
     width: 100%;
+    z-index: 2;
 }
 
 nav div{
@@ -44,4 +45,22 @@ nav div{
     border-radius: 25px;
     background-color: red;
     padding: 10px 20px;
+}
+
+header {
+    position: relative;
+
+}
+
+body{
+    padding: 0;
+    margin: 0;
+    border-radius: 0;
+}
+
+video {
+    width: 100%;
+    height: auto;
+    position: relative;
+    z-index: 1;
 }
